load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
)
load("//tools/install:install_data.bzl", "install_data")

drake_cc_binary(
    name = "run_box_pile",
    srcs = [
        "box_pile.cc",
    ],
    data = [
        ":models",
    ],
    deps = [
        "//common:find_resource",
        "//common:add_text_logging_gflags",
        "//geometry:meshcat",
        "//geometry:meshcat_visualizer",
        "//lcm",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/contact_solvers",
        "//systems/analysis",
        "//systems/framework",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "@sdformat",
    ],
)

install_data()